config autommaper try 2

--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -155,6 +155,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutoMapperProfile.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\ContainerConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
