--- a/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
+++ b/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="DateTimeModel.cs" />
+    <Compile Include="IBodyShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
