added manufac. model and model version classes and DIModules

--- a/AuTOP/AuTOP.Repository/AuTOP.Repository.csproj
+++ b/AuTOP/AuTOP.Repository/AuTOP.Repository.csproj
@@ -79,7 +79,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="ManufacturerRepository.cs" />
+    <Compile Include="ModelRepository.cs" />
+    <Compile Include="ModelVersionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryDIModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
