--- a/AuTOP/AuTOP.Model/AuTOP.Model.csproj
+++ b/AuTOP/AuTOP.Model/AuTOP.Model.csproj
@@ -81,6 +81,13 @@
     <Compile Include="DomainModels\ManufacturerDomainModel.cs" />
     <Compile Include="BodyShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AuTOP.Model.Common\AuTOP.Model.Common.csproj">
+      <Project>{d1dea62f-9803-48c7-b9a8-2b3d9ea03530}</Project>
+      <Name>AuTOP.Model.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AuTOP.Model.Common\AuTOP.Model.Common.csproj">
