--- a/AuTOP/AuTOP.Service/AuTOP.Service.csproj
+++ b/AuTOP/AuTOP.Service/AuTOP.Service.csproj
@@ -78,12 +78,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="ManufacturerServis.cs" />
     <Compile Include="ModelService.cs" />
     <Compile Include="ModelVersionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceDIModule.cs" />
+    <Compile Include="UserService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AuTOP.Model.Common\AuTOP.Model.Common.csproj">
+      <Project>{d1dea62f-9803-48c7-b9a8-2b3d9ea03530}</Project>
+      <Name>AuTOP.Model.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AuTOP.Model\AuTOP.Model.csproj">
+      <Project>{481499d4-d3ac-4fd9-a17a-9da228f7eca0}</Project>
+      <Name>AuTOP.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AuTOP.Repository.Common\AuTOP.Repository.Common.csproj">
+      <Project>{e2c764ae-bed0-43d8-825b-300923b84e81}</Project>
+      <Name>AuTOP.Repository.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AuTOP.Repository\AuTOP.Repository.csproj">
+      <Project>{ab281edb-580b-4cca-93fb-c8789ea4f9e0}</Project>
+      <Name>AuTOP.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AuTOP.Service.Common\AuTOP.Service.Common.csproj">
+      <Project>{5bc3cdc1-0440-4a84-80f5-0221bd696d9b}</Project>
+      <Name>AuTOP.Service.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
