--- a/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
+++ b/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IUserService.cs" />
+    <Compile Include="IBodyShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
