--- a/AuTOP/AuTOP.Model/AuTOP.Model.csproj
+++ b/AuTOP/AuTOP.Model/AuTOP.Model.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="DomainModels\ManufacturerDomainModel.cs" />
     <Compile Include="BodyShape.cs" />
+    <Compile Include="Motor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
@@ -88,6 +89,7 @@
       <Project>{d1dea62f-9803-48c7-b9a8-2b3d9ea03530}</Project>
       <Name>AuTOP.Model.Common</Name>
     </ProjectReference>
+    <Compile Include="Transmission.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AuTOP.Model.Common\AuTOP.Model.Common.csproj">
