--- a/AuTOP/AuTOP.Repository.Common/AuTOP.Repository.Common.csproj
+++ b/AuTOP/AuTOP.Repository.Common/AuTOP.Repository.Common.csproj
@@ -78,6 +78,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBodyShapeRepository.cs" />
+    <Compile Include="IMotorRepository.cs" />
+    <Compile Include="ITransmissionRepository.cs" />
     <Compile Include="IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
