--- a/AuTOP/AuTOP.Common/AuTOP.Common.csproj
+++ b/AuTOP/AuTOP.Common/AuTOP.Common.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="ManufacturerFilter.cs" />
+    <Compile Include="ModelFilter.cs" />
     <Compile Include="Paging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sorting.cs" />
