--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -288,6 +288,11 @@
     <ProjectReference Include="..\AuTOP.Model.Common\AuTOP.Model.Common.csproj">
       <Project>{d1dea62f-9803-48c7-b9a8-2b3d9ea03530}</Project>
       <Name>AuTOP.Model.Common</Name>
+      </ProjectReference>
+
+    <ProjectReference Include="..\AuTOP.Common\AuTOP.Common.csproj">
+      <Project>{C8543283-2FBF-482A-B432-04741018ABAC}</Project>
+      <Name>AuTOP.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\AuTOP.Model\AuTOP.Model.csproj">
       <Project>{481499d4-d3ac-4fd9-a17a-9da228f7eca0}</Project>
