--- a/AuTOP/AuTOP.Repository.Common/AuTOP.Repository.Common.csproj
+++ b/AuTOP/AuTOP.Repository.Common/AuTOP.Repository.Common.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBodyShapeRepository.cs" />
+    <Compile Include="IModelRepository.cs" />
     <Compile Include="IMotorRepository.cs" />
     <Compile Include="ITransmissionRepository.cs" />
     <Compile Include="IUserRepository.cs" />
