--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -200,6 +200,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DetailModel\ManufacturerDetailModel.cs" />
+    <Compile Include="Models\DetailModel\ModelDetailView.cs" />
     <Compile Include="Models\ViewModels\ManufacturerViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
