--- a/AuTOP/AuTOP.Common/AuTOP.Common.csproj
+++ b/AuTOP/AuTOP.Common/AuTOP.Common.csproj
@@ -85,5 +85,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sorting.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
