--- a/AuTOP/AuTOP.DAL/AuTOP.DAL.csproj
+++ b/AuTOP/AuTOP.DAL/AuTOP.DAL.csproj
@@ -81,5 +81,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
