--- a/AuTOP/AuTOP.Repository.Common/AuTOP.Repository.Common.csproj
+++ b/AuTOP/AuTOP.Repository.Common/AuTOP.Repository.Common.csproj
@@ -101,5 +101,8 @@
       <Name>AuTOP.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
