Add Reaction model and interface

--- a/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
+++ b/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="DateTimeModel.cs" />
     <Compile Include="IBodyShape.cs" />
     <Compile Include="IModelVersion.cs" />
+    <Compile Include="IReaction.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="ITransmission.cs" />
     <Compile Include="IMotor.cs" />
