--- a/AuTOP/AuTOP.Model/AuTOP.Model.csproj
+++ b/AuTOP/AuTOP.Model/AuTOP.Model.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Motor.cs" />
     <Compile Include="DomainModels\ModelDomainModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reaction.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
