--- a/AuTOP/AuTOP.Repository/AuTOP.Repository.csproj
+++ b/AuTOP/AuTOP.Repository/AuTOP.Repository.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ModelVersionRepository.cs" />
     <Compile Include="MotorRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReactionRepository.cs" />
     <Compile Include="RepositoryDIModule.cs" />
     <Compile Include="TransmissionRepository.cs" />
     <Compile Include="UserRepository.cs" />
