--- a/AuTOP/AuTOP.Service/AuTOP.Service.csproj
+++ b/AuTOP/AuTOP.Service/AuTOP.Service.csproj
@@ -82,6 +82,7 @@
     <Compile Include="ModelService.cs" />
     <Compile Include="ModelVersionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReactionService.cs" />
     <Compile Include="ServiceDIModule.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
