--- a/AuTOP/AuTOP.Common/AuTOP.Common.csproj
+++ b/AuTOP/AuTOP.Common/AuTOP.Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ManufacturerFilter.cs" />
     <Compile Include="ModelFilter.cs" />
+    <Compile Include="ModelVersionFilter.cs" />
     <Compile Include="Paging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sorting.cs" />
