--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -201,7 +201,9 @@
     </Compile>
     <Compile Include="Models\DetailModel\ManufacturerDetailModel.cs" />
     <Compile Include="Models\DetailModel\ModelDetailView.cs" />
+    <Compile Include="Models\DetailModel\ModelVersionDetailModel.cs" />
     <Compile Include="Models\ViewModels\ManufacturerViewModel.cs" />
+    <Compile Include="Models\ViewModels\ModelVersionViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
