﻿Review Get,GetById,Post methods added

--- a/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
+++ b/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
@@ -82,6 +82,7 @@
     <Compile Include="IBodyShape.cs" />
     <Compile Include="IModelVersion.cs" />
     <Compile Include="IReaction.cs" />
+    <Compile Include="IReview.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="ITransmission.cs" />
     <Compile Include="IMotor.cs" />
