--- a/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
+++ b/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="IReactionService.cs" />
     <Compile Include="IModelService.cs" />
     <Compile Include="IModelVersionService.cs" />
+    <Compile Include="IReviewService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="IBodyShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
