--- a/AuTOP/AuTOP.Model/AuTOP.Model.csproj
+++ b/AuTOP/AuTOP.Model/AuTOP.Model.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DomainModels\ModelDomainModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reaction.cs" />
+    <Compile Include="Review.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
