--- a/AuTOP/AuTOP.Repository/AuTOP.Repository.csproj
+++ b/AuTOP/AuTOP.Repository/AuTOP.Repository.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReactionRepository.cs" />
     <Compile Include="RepositoryDIModule.cs" />
+    <Compile Include="ReviewRepository.cs" />
     <Compile Include="TransmissionRepository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
