--- a/AuTOP/AuTOP.Service/AuTOP.Service.csproj
+++ b/AuTOP/AuTOP.Service/AuTOP.Service.csproj
@@ -83,6 +83,7 @@
     <Compile Include="ModelVersionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReactionService.cs" />
+    <Compile Include="ReviewService.cs" />
     <Compile Include="ServiceDIModule.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
