--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Controllers\ModelController.cs" />
     <Compile Include="Controllers\ModelVersionController.cs" />
     <Compile Include="Controllers\ReactionController.cs" />
+    <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -261,6 +262,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Review\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
