--- a/AuTOP/AuTOP.Common/AuTOP.Common.csproj
+++ b/AuTOP/AuTOP.Common/AuTOP.Common.csproj
@@ -84,6 +84,7 @@
     <Compile Include="ModelVersionFilter.cs" />
     <Compile Include="Paging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReviewFilter.cs" />
     <Compile Include="Sorting.cs" />
   </ItemGroup>
   <ItemGroup>
