fixing, added generate method and input models

--- a/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
+++ b/AuTOP/AuTOP.Model.Common/AuTOP.Model.Common.csproj
@@ -78,7 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateTimeModel.cs" />
+    <Compile Include="IdDateBaseModelcs.cs" />
     <Compile Include="IBodyShape.cs" />
     <Compile Include="IModelVersion.cs" />
     <Compile Include="IReaction.cs" />
