--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -234,6 +234,10 @@
     <Compile Include="Models\DetailModel\ManufacturerDetailModel.cs" />
     <Compile Include="Models\DetailModel\ModelDetailView.cs" />
     <Compile Include="Models\DetailModel\ModelVersionDetailModel.cs" />
+    <Compile Include="Models\InputModel\ManufacturerInputModel.cs" />
+    <Compile Include="Models\InputModel\ModelInputModel.cs" />
+    <Compile Include="Models\InputModel\ModelVersionInput.cs" />
+    <Compile Include="Models\InputModel\MotorInputModel.cs" />
     <Compile Include="Models\ViewModels\ManufacturerViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelVersionViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelViewModel.cs" />
