--- a/AuTOP/AuTOP.Common/AuTOP.Common.csproj
+++ b/AuTOP/AuTOP.Common/AuTOP.Common.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReviewFilter.cs" />
     <Compile Include="Sorting.cs" />
+    <Compile Include="UserFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
