--- a/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
+++ b/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMotorService.cs" />
     <Compile Include="IReactionService.cs" />
     <Compile Include="IModelService.cs" />
     <Compile Include="IModelVersionService.cs" />
