--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -236,7 +236,7 @@
     <Compile Include="Models\DetailModel\ModelVersionDetailModel.cs" />
     <Compile Include="Models\InputModel\ManufacturerInputModel.cs" />
     <Compile Include="Models\InputModel\ModelInputModel.cs" />
-    <Compile Include="Models\InputModel\ModelVersionInput.cs" />
+    <Compile Include="Models\InputModel\ModelVersionInputModel.cs" />
     <Compile Include="Models\InputModel\MotorInputModel.cs" />
     <Compile Include="Models\ViewModels\ManufacturerViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelVersionViewModel.cs" />
