--- a/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
+++ b/AuTOP/AuTOP.Service.Common/AuTOP.Service.Common.csproj
@@ -78,13 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBodyShapeService.cs" />
     <Compile Include="IMotorService.cs" />
     <Compile Include="IReactionService.cs" />
     <Compile Include="IModelService.cs" />
     <Compile Include="IModelVersionService.cs" />
     <Compile Include="IReviewService.cs" />
+    <Compile Include="ITransmissionService.cs" />
     <Compile Include="IUserService.cs" />
-    <Compile Include="IBodyShape.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IManufacturerServis.cs" />
   </ItemGroup>
