--- a/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
+++ b/AuTOP/AuTOP.WebAPI/AuTOP.WebAPI.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\BodyShapeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManufacturerController.cs" />
     <Compile Include="Controllers\ModelController.cs" />
@@ -227,6 +228,7 @@
     <Compile Include="Controllers\MotorController.cs" />
     <Compile Include="Controllers\ReactionController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
+    <Compile Include="Controllers\TransmissionController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -238,12 +240,14 @@
     <Compile Include="Models\InputModel\ModelInputModel.cs" />
     <Compile Include="Models\InputModel\ModelVersionInputModel.cs" />
     <Compile Include="Models\InputModel\MotorInputModel.cs" />
+    <Compile Include="Models\ViewModels\BodyShapeViewModel.cs" />
     <Compile Include="Models\ViewModels\ManufacturerViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelVersionViewModel.cs" />
     <Compile Include="Models\ViewModels\ModelViewModel.cs" />
     <Compile Include="Models\ViewModels\MotorViewModel.cs" />
     <Compile Include="Models\ViewModels\PagedViewManufacturersModel.cs" />
     <Compile Include="Models\ViewModels\ReviewViewModel.cs" />
+    <Compile Include="Models\ViewModels\TransmissionViewModel.cs" />
     <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\OauthProvider.cs" />
